# tox-direct

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: CI_CD.yml
src/tox_direct/: hookimpls.py
tests/: test_tox_direct.py
