[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
keywords = testing automation
maintainer = Oliver Bestwalter
author = Oliver Bestwalter
maintainer-email = oliver@bestwalter.de
url = https://github.com/obestwalter/tox-direct
project_urls =
    Source=https://github.com/obestwalter/tox-direct
    Tracker=https://github.com/oestwalter/tox-direct/issues
platforms = any
license = MIT
license_file = LICENSE
classifiers =
        Development Status :: 4 - Beta
        Framework :: tox
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: Implementation :: CPython
        Programming Language :: Python :: Implementation :: PyPy
        Topic :: Software Development :: Testing

[bdist_wheel]
universal = 1
